# zap

./: .gitignore  .pre-commit-config.yaml  README.md  fzf.py  main.py  pyproject.toml
